<resources>
    <string name="app_name">Calculator</string>
    <string name="inputField">Input</string>
    <string name="outputField">Output</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_delete">Delete</string>

    <!--Strings for second Fragment-->
    <string name="number_0">0</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="symbol_divide">/</string>
    <string name="symbol_multiply">*</string>
    <string name="symbol_minus">-</string>
    <string name="symbol_plus">+</string>
    <string name="symbol_dot">.</string>
    <string name="symbol_result">=</string>

    <!--Strings for second Fragment-->
    <string name="symbol_PI">π</string>
    <string name="symbol_exponent">e</string>
    <string name="symbol_skobL">(</string>
    <string name="symbol_skobR">)</string>
    <string name="fun_sin">sin</string>
    <string name="fun_cos">cos</string>
    <string name="fun_tg">tg</string>
    <string name="fun_ctg">ctg</string>
    <string name="fun_factorial">!</string>
    <string name="symbol_percent">%</string>
    <string name="fun_pow">^</string>
    <string name="fun_ln">ln</string>
    <string name="fun_lg">lg</string>
    <string name="fun_sqrt">√</string>
    <string name="fun_square">Х²</string>
    <string name="degrees">DEG</string>
    <string name="radians">RAD</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
